<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    android:padding="15dp">

    <!-- Layout for header of navigation drawer, populate with user data -->

    <TextView
        android:id="@+id/nav_text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/nav_text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="14sp" />

</LinearLayout>